modules/ec2-module/main.tf
data "aws_ami" "amazon_linux_2" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "owner-alias"
    values = ["amazon"]
  }

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm*"]
  }
}

resource "aws_instance" "ec2_server" {
  ami           = data.aws_ami.amazon_linux_2.id
  instance_type = var.instancetype
  key_name      = "newKey"

  tags                   = var.aws_common_tag
  vpc_security_group_ids = [aws_security_group.allow_http_https_ssh.id]

  provisioner "remote-exec" {
    inline = [
      "sudo amazon-linux-extras install -y nginx1.12",
      "sudo systemctl start nginx",
    ]

    connection {
      type        = "ssh"
      user        = "ec2-user"
      private_key = file("./newKey.pem")
      host        = self.public_ip
    }
  }
}

resource "aws_security_group" "allow_http_https_ssh" {
  name        = var.sg_name
  description = "Allow http and https inbound traffic"

  ingress {
    description = "https from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_http_https_sg"
  }
}

resource "aws_eip" "myEIP" {
  instance = aws_instance.ec2_server.id
  vpc      = true

  provisioner "local-exec" {
    command = "echo PUBLIC IP: ${aws_eip.myEIP.public_ip} >> infos_ec2.txt"
  }
}
